k8s/staging/ingress/gamedin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamedin-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - staging.gamedin.xyz
    secretName: gamedin-tls
  rules:
  - host: staging.gamedin.xyz
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: gamedin-dapp
            port:
              number: 80
